# Guzzlers-n-Dragons

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP.md  TECHNICAL_DESIGN.md  pyproject.toml
.github/workflows/: ci.yml
data/cooking_science/: flavor_pairing.md  technique_substitution.md  texture_modification.md
docker/: Dockerfile  docker-compose.yml
scripts/: ingest_cooking_science.py  run_seeds.py  seed_fictional_ingredients.py  seed_real_ingredients.py  seed_recipe_patterns.py
src/: main.py
src/agents/: __init__.py  creator.py  critic.py  graph.py  llm.py  planner.py
src/api/: routes.py
src/config/: logging.py  settings.py
src/schemas/: __init__.py  agents.py  domain.py  request.py  response.py
src/services/: __init__.py  database.py  fineli_client.py  openfoodfacts_client.py  themealdb_client.py  usda_client.py  vector_store.py
src/tools/: __init__.py  agent_tools.py  cooking.py  nutrition.py  validation.py
tests/: conftest.py  mock_embeddings.py
tests/agents/: test_agents.py
tests/api/: conftest.py  test_routes.py
tests/config/: test_settings.py
tests/schemas/: test_domain.py  test_request.py  test_response.py
tests/services/: conftest.py  test_database.py  test_fineli_client.py  test_openfoodfacts_client.py  test_themealdb_client.py  test_usda_client.py  test_vector_store.py
tests/tools/: test_agent_tools.py  test_nutrition.py  test_tools.py  test_validation.py
